welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:19: error: not found: value setCouleur
	setCouleur(Color.YELLOW)
        ^